# byecycle

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: pipeline.yml
docs/: advanced.md  coc.md
docs/autodocs/: byecycle.md  draw.md  graph.md  misc.md
docs/css/: style.css
src/byecycle/: __init__.py  __main__.py  cli.py  graph.py  misc.py
src/byecycle/draw/: __init__.py
tests/: conftest.py  test_module_imports.py
tests/scenarios/: test_package.py  test_relative_imports.py
tests/test_scenarios/: test_basics.py
tests/unit/: test_graph.py
