[project]
name = "byecycle"
version = "0.1.2"
description = "Find and expose cyclic imports in python projects."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arne Caratti", email = "arne.recknagel@hotmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "networkx[default]>=3.1",
    "chextra>=0.1.1",
    "typer[all]>=0.9.0",
    "rich>=13.3",
]

[project.optional-dependencies]
draw = ["matplotlib>=3.7"]

[project.scripts]
byecycle = "byecycle.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=23.3.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs-section-index>=0.3.5",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-material>=9.1.14",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.3.0",
    "click>=8.1.3",
    "pip>=23.1.2",
    "pytest-mock>=3.10.0",
]
security = [
    "safety>=2.3.4",
    "bandit>=1.7.5",
]

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
enable_incomplete_feature=["Unpack"]

[tool.coverage.run]
branch = true
data_file = ".coverage/coverage_report"
source = ["byecycle"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
